--- a/package.json
+++ b/package.json
@@ -22,5 +22,14 @@
   "devDependencies": {
     "jest": "^26.6.3",
     "webpack-dev-server": "^3.11.2"
+  },
+  "scripts": {
+    "test": "jest",
+    "test-watch": "jest --watch"
+  },
+  "jest": {
+    "roots": [
+      "test/javascript"
+    ]
   }
 }
