--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "@testing-library/react": "^11.2.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "dotenv": "^8.2.0",
     "prop-types": "^15.7.2",
