--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
-    "@testing-library/react": "^11.2.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "dotenv": "^8.2.0",
     "prop-types": "^15.7.2",
@@ -21,6 +20,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@testing-library/react": "^11.2.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "webpack-dev-server": "^3.11.2"
   },
@@ -31,6 +32,10 @@
   "jest": {
     "roots": [
       "test/javascript"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   }
 }
